[build-system]
requires = ["flit_core>=3.10.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'pt-repost'
version = '0'
requires-python = '~=3.10'
description = ''

dependencies = [
    'qbittorrent-api==2024.11.70',
    'click~=8.1.7',
    'sslog==0.0.0a51',
    'pydantic==2.10.0',
    'httpx==0.27.2',
    'bencode2~=0.3.15',
    'tomli~=2.1.0',
    'yarl~=1.18.0',
    'guessit~=3.8.0',
    'six',
    'importlib_resources~=6.4.5',
]

[project.optional-dependencies]
dev = [
    'types-six',
    'mypy',
    'pre-commit'
]

[project.scripts]
pt-repost = 'pt_repost.main:main'

[tool.pytest.ini_options]
cache_dir = '.venv/.cache/pytest'
pythonpath = [
    "src"
]

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
python_version = '3.10'
#strict = true
allow_redefinition = true
ignore_missing_imports = true
check_untyped_defs = true
warn_no_return = false
warn_redundant_casts = true
explicit_package_bases = true

[tool.ruff.lint]
extend-select = ['I']
