[build-system]
requires = ["flit_core>=3.10.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'pt-repost'
version = '0'
requires-python = '~=3.10'
description = ''

dependencies = [
    'orjson~=3.10',
    'uuid-utils~=0.10',
    'rich~=13.9',
    'cryptography~=44.0',
    'xxhash~=3.5',
    'qbittorrent-api==2024.12.71',
    'click~=8.1.7',
    'sslog==0.0.0a51',
    'pydantic==2.10.6',
    'httpx~=0.28.0',
    'bencode2~=0.3.15',
    'tomli~=2.2.1',
    'yarl~=1.18',
    'guessit~=3.8',
    'six~=1.17',
    'psycopg[binary,pool]~=3.2.3',
    'regex~=2024.11',
    'rapidocr-onnxruntime~=1.4', # 识别硬字幕
    'pillow~=11.0',
    'durationpy==0.9',
    'fastapi==0.115.6',
    'uvicorn==0.34.0',
    'asyncpg==0.30.0',
    'jinja2==3.1.5'
]

[dependency-groups]
dev = [
    'types-regex~=2024.11',
    'types-six~=1.17',
    'mypy'
]

[project.scripts]
pt-repost = 'pt_repost.main:main'

[tool.pytest.ini_options]
cache_dir = '.venv/.cache/pytest'

[tool.mypy]
exclude = 'build,data'
mypy_path = '$MYPY_CONFIG_FILE_DIR'
python_version = '3.10'
disable_error_code = ["no-any-return"]
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]

[tool.ruff.lint]
preview = true
extend-select = ['I', 'PLW1514']
unfixable = ['F401']
