[build-system]
requires = ["flit_core==3.10.1"]
build-backend = "flit_core.buildapi"

[project]
name = 'pt-repost'
version = '0'
requires-python = '~=3.10.0'
description = ''
dependencies = [
    'orjson==3.10.15',
    'uuid-utils==0.10.0',
    'rich==13.9.4',
    'cryptography==44.0.0',
    'xxhash==3.5.0',
    'qbittorrent-api==2024.12.71',
    'click==8.1.8',
    'sslog==0.0.0a52',
    'pydantic==2.10.6',
    'httpx==0.28.1',
    'bencode2==0.3.21',
    'tomli==2.2.1',
    'yarl==1.18.3',
    'guessit==3.8.0',
    'six==1.17.0',
    'psycopg[binary,pool]==3.2.4',
    'regex==2024.11.6',
    'rapidocr-onnxruntime==1.4.4', # 识别硬字幕
    'pillow==11.1.0',
    'durationpy==0.9',
    'fastapi==0.115.8',
    'uvicorn==0.34.0',
    'asyncpg==0.30.0',
    'jinja2==3.1.5',
    'pyyaml==6.0.2',
    'tzdata',
]

[dependency-groups]
dev = [
    'types-regex==2024.11.6.20241221',
    'types-six==1.17.0.20241205',
    'types-PyYAML==6.0.12.20241230',
    'mypy',
]

[project.scripts]
pt-repost = 'pt_repost.main:main'

[tool.pytest.ini_options]
cache_dir = '.venv/.cache/pytest'

[tool.mypy]
exclude = 'build,data'
mypy_path = '$MYPY_CONFIG_FILE_DIR'
python_version = '3.10'
disable_error_code = ["no-any-return"]
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]

[tool.ruff.lint]
preview = true
extend-select = ['I', 'PLW1514']
unfixable = ['F401']
